# polyarb

./: README.md  config.yaml  pyproject.toml
.claude/: settings.local.json
examples/: sample_output.json
polyarb/: __init__.py  _preflight.py  cli.py  config.py  timeutils.py
polyarb.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
polyarb/api/: __init__.py  async_clob_client.py  async_gamma_client.py  async_http.py  clob_client.py  gamma_client.py  http.py
polyarb/models/: __init__.py  event.py  market.py  opportunity.py  orderbook.py  parsing.py
polyarb/ranking/: __init__.py  scoring.py
polyarb/scanners/: __init__.py  correlated_scanner.py  execution.py  neg_risk_scanner.py
polyarb/streaming/: __init__.py  diff.py  order_book_cache.py  state_store.py  watcher.py
tests/: conftest.py  test_async_http.py  test_cli.py  test_config_and_horizon.py  test_correlated.py  test_fee_execution.py  test_neg_risk.py  test_parsing.py  test_preflight.py  test_ranking.py  test_streaming.py
