[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "polyarb"
version = "0.1.0"
description = "Research-only Polymarket structural arbitrage scanner"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "urllib3<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
polyarb = "polyarb.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
